--- a/mkdir_pantallas/crear_usuario.kv
+++ b/mkdir_pantallas/crear_usuario.kv
@@ -77,3 +77,6 @@
                         pos: self.pos
                         size: self.size
                         radius: [12]
+
+            # (Botón de volver al menú movido al Panel de Admin)
+
