--- a/mkdir_pantallas/panel_admin.kv
+++ b/mkdir_pantallas/panel_admin.kv
@@ -63,7 +63,25 @@
                 font_size: dp(18)
                 canvas.before:
                     Color:
-                        rgba: 0.1, 0.7, 0.4, 1   # verde para diferenciarlo
+                        rgba: 0.1, 0.7, 0.4, 1
+                    RoundedRectangle:
+                        pos: self.pos
+                        size: self.size
+                        radius: [12]
+
+            # ---------------------------
+            # NUEVO → Ver Ventas / Facturas
+            # ---------------------------
+            Button:
+                text: "Ver Ventas / Facturas"
+                size_hint: (0.6, None)
+                height: dp(50)
+                pos_hint: {"center_x": 0.5}
+                on_release: root.ir_a_ver_ventas()
+                font_size: dp(18)
+                canvas.before:
+                    Color:
+                        rgba: 0.6, 0.3, 0.9, 1   # color violeta para diferenciarlo
                     RoundedRectangle:
                         pos: self.pos
                         size: self.size
